# extendedbot

./: .env.example  .gitignore  BUGS.md  CLAUDE.md  Cargo.toml  SIGNING_DEBUG.md  STATUS.md  TODOS.md  fills.jsonl  markouts.jsonl  run.sh
.claude/agents/: implementer.md  prompt-engineer.md  quant-analyst.md  researcher.md  review-scan.md  review-verify.md  review.md
config/: altcoin.toml  default.toml  testnet.toml
crates/extended-bot/: Cargo.toml
crates/extended-bot/src/: fill_logger.rs  main.rs  market_bot.rs  orchestrator.rs  state.rs
crates/extended-crypto/: Cargo.toml
crates/extended-crypto/src/: hash.rs  key.rs  lib.rs  sign.rs
crates/extended-exchange/: Cargo.toml
crates/extended-exchange/src/: adapter.rs  binance_ws.rs  hyperliquid_ws.rs  lib.rs  order_tracker.rs  rate_limiter.rs  rest.rs  rest_types.rs  websocket.rs  ws_types.rs
crates/extended-orderbook/: Cargo.toml
crates/extended-orderbook/src/: lib.rs
crates/extended-paper/: Cargo.toml
crates/extended-paper/src/: lib.rs
crates/extended-risex/: Cargo.toml
crates/extended-risex/src/: encoder.rs  lib.rs  rest.rs  rest_types.rs  signing.rs  types.rs
crates/extended-risk/: Cargo.toml
crates/extended-risk/src/: circuit_breaker.rs  exposure.rs  fast_cancel.rs  latency.rs  lib.rs  markout.rs  position_manager.rs  roc_guard.rs
crates/extended-strategy/: Cargo.toml
crates/extended-strategy/src/: depth_imbalance.rs  fair_price.rs  implied_bbo.rs  lib.rs  quote_generator.rs  skew.rs  spread.rs  trade_flow.rs  vpin.rs
crates/extended-types/: Cargo.toml
crates/extended-types/src/: config.rs  decimal_utils.rs  events.rs  lib.rs  market_data.rs  order.rs
scripts/review/: review.sh  stage1_scan.md  stage2_verify.md
scripts/risex-latency/: README.md  cancel.ts  discover.ts  encoder_check.ts  hl_ping.ts  hl_rtt.ts  measure.ts  package.json  tsconfig.json
