[package]
name = "extended-bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "extended-mm"
path = "src/main.rs"

[dependencies]
extended-types = { workspace = true }
extended-crypto = { workspace = true }
extended-exchange = { workspace = true }
extended-orderbook = { workspace = true }
extended-risk = { workspace = true }
extended-strategy = { workspace = true }
extended-paper = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
