[package]
name = "extended-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
extended-types = { workspace = true }
starknet-crypto = { workspace = true }
starknet-types-core = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
rust-crypto-lib-base = { workspace = true }
num-bigint = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
