[package]
name = "extended-exchange"
version = "0.1.0"
edition = "2021"

[dependencies]
extended-types = { workspace = true }
extended-crypto = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
